--- a/Home (1).html
+++ b/Home (1).html
@@ -124,7 +124,7 @@
     </label>
     <label class="logo">IdolMart</label>
     <ul>
-      <li><a class="active" href="Home.html">Home</a></li>
+      <li><a class="active" href="Home(1).html">Home</a></li>
       <li><a href="About.html">About</a></li>
       <li><a href="Merch.html">Merchandise</a></li>
       <li><a href="Contact.html">Contact</a></li>
